@@ -30,9 +30,9 @@
  * @author Oliver Klee <typo3-coding@oliverklee.de>
  */
 
-require_once(t3lib_extMgm::extPath('oelib').'class.tx_oelib_testingFramework.php');
+require_once(t3lib_extMgm::extPath('oelib') . 'class.tx_oelib_Autoloader.php');
 
-require_once(t3lib_extMgm::extPath('contactslist').'pi1/class.tx_contactslist_pi1.php');
+require_once(t3lib_extMgm::extPath('contactslist') . 'pi1/class.tx_contactslist_pi1.php');
 
 class tx_contactslist_pi1_testcase extends tx_phpunit_testcase {
 	/** the name of our main data table */
