@@ -1,4 +1,5 @@
 1.0.0 - currently working on
+- [#2322] Feature: Create an autoloader for models and other classes
 
 0.5.0 - released 2008-12-16
 - [#2419] Change: Make the country a table key
